--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100% !important; }
+* { margin: 0;  font-family: 'Inter var', sans-serif; font-size: 14px;}
