--- a/src/app/main-table/main-table.component.html
+++ b/src/app/main-table/main-table.component.html
@@ -27,6 +27,7 @@
   <span class="">
     <button class="btn-primary exportButton" (click)="exportexcel()">Export</button>
   </span>
+  <span  class="total">Total Hours : {{total}}</span>
 
 </div>
 <div class="container">
