--- a/src/app/editable-table/editable-table.component.css
+++ b/src/app/editable-table/editable-table.component.css
@@ -9,6 +9,14 @@
   height: 50px;
   width: 120px;
 }
+
+.addrow{
+    margin-left: 180px;
+}
+.btn{
+    margin-right:180px;
+    float: right;
+}
 table{
     margin-top: 50px;
     width:72%;
