--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,15 @@
 }
 table {
   width: 100%;
+  margin-top: 55px;
+  
  
+}
+.logbutton{
+    
+        display: table-cell;
+        width: 150px;
+      
 }
 .total{
   margin-left: 250px;
