--- a/src/app/editable-table1/editable-table1.component.html
+++ b/src/app/editable-table1/editable-table1.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <form [formGroup]="logdata">
         
       <div class="column1">
@@ -136,4 +136,4 @@
       </form>
       <button type="button" class="btn btn-primary" (click)="addUser(logdata)"><mat-icon>save</mat-icon></button>
       <button class="addrow" type="button" (click)="addRow()">Add Row</button>
-      </div>
+      </div> -->
