--- a/src/app/editable-table/editable-table.component.html
+++ b/src/app/editable-table/editable-table.component.html
@@ -17,7 +17,7 @@
             <div  class="col-sm-2">
             <select [(ngModel)]="user.p_type" class="selectpicker" data-size="5" title="Type" class="form-control selectpicker"  data-live-search="true" >
                 <option  data-hidden="true"></option>
-                <option value="devops">Devops</option>
+                <option value="Devops">Devops</option>
               <option value="Developer">Developer</option>
             </select>
        
@@ -99,14 +99,83 @@
           </td>
         
           </tr> 
+          <tr>
+            <td class="tsid">
+              <input type="text" [(ngModel)]="user.ts_id" class="form-control" />
+          </td>
+          <td>
+            <input type="date" [(ngModel)]="user.date" class="form-control" value="{{user.date | date:'yyyy-MM-dd'}}" [min]="minDate | date:'yyyy-MM-dd'" [max]="maxDate | date:'yyyy-MM-dd'" >           
+           </td>
+          <td>
+           
+                  <select [(ngModel)]="user.project_name" class="selectpicker" data-size="5" title="Project Name" class="form-control selectpicker"  data-live-search="true">
+                      <option  data-hidden="true"></option>
+                      <option *ngFor="let project of projname" [value]="project.project_name">{{project.project_name}}</option>
+                    </select>            
+           </td>
+          <td>
+              <input type="text" [(ngModel)]="user.task_name" class="form-control" />
+         </td>
+
+          <td>
+              <input type="text" [(ngModel)]="user.hours" class="form-control" />
+          </td>
+        
+          </tr> 
+          <tr>
+            <td class="tsid">
+              <input type="text" [(ngModel)]="user.ts_id" class="form-control" />
+          </td>
+          <td>
+            <input type="date" [(ngModel)]="user.date" class="form-control" value="{{user.date | date:'yyyy-MM-dd'}}" [min]="minDate | date:'yyyy-MM-dd'" [max]="maxDate | date:'yyyy-MM-dd'" >           
+           </td>
+          <td>
+           
+                  <select [(ngModel)]="user.project_name" class="selectpicker" data-size="5" title="Project Name" class="form-control selectpicker"  data-live-search="true">
+                      <option  data-hidden="true"></option>
+                      <option *ngFor="let project of projname" [value]="project.project_name">{{project.project_name}}</option>
+                    </select>            
+           </td>
+          <td>
+              <input type="text" [(ngModel)]="user.task_name" class="form-control" />
+         </td>
+
+          <td>
+              <input type="text" [(ngModel)]="user.hours" class="form-control" />
+          </td>
+        
+          </tr> 
+          <tr>
+            <td class="tsid">
+              <input type="text" [(ngModel)]="user.ts_id" class="form-control" />
+          </td>
+          <td>
+            <input type="date" [(ngModel)]="user.date" class="form-control" value="{{user.date | date:'yyyy-MM-dd'}}" [min]="minDate | date:'yyyy-MM-dd'" [max]="maxDate | date:'yyyy-MM-dd'" >           
+           </td>
+          <td>
+           
+                  <select [(ngModel)]="user.project_name" class="selectpicker" data-size="5" title="Project Name" class="form-control selectpicker"  data-live-search="true">
+                      <option  data-hidden="true"></option>
+                      <option *ngFor="let project of projname" [value]="project.project_name">{{project.project_name}}</option>
+                    </select>            
+           </td>
+          <td>
+              <input type="text" [(ngModel)]="user.task_name" class="form-control" />
+         </td>
+
+          <td>
+              <input type="text" [(ngModel)]="user.hours" class="form-control" />
+          </td>
+        
+          </tr> 
           
            <tr  *ngFor="let dynamic of dynamicArray; let i = index;">
             <td class="tsid">
-              <input type="text" [(ngModel)]="user.ts_id" class="form-control"   />
+              <input type="text" [(ngModel)]="user.ts_id" class="form-control"/>
           </td>
           <td>
 
-          <input type="date" [(ngModel)]="user.date" placeholder="yyyy-mm-dd" [min]="minDate | date:'yyyy-MM-dd'" [max]="maxDate | date:'yyyy-MM-dd'" name="{{dynamic.date}}" >
+          <input type="date" [(ngModel)]="user.date" placeholder="yyyy-mm-dd" [min]="minDate | date:'yyyy-MM-dd'" [max]="maxDate | date:'yyyy-MM-dd'" name="{{dynamic.date}}" class="form-control">
 
         </td>
           <td>
