--- a/src/app/main-table/main-table.component.css
+++ b/src/app/main-table/main-table.component.css
@@ -71,3 +71,8 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
   height:40px;
   border-radius: 2%;
 }
+.noData
+{
+  text-align: center;
+
+}
